remove unused Dinic methods and variables; make graph more generic by replacing LinkedList declarations for List